# waymon

./: Cargo.toml  LICENSE  README.md
doc/: config.md
example/: config.toml  style.css
waymon/: Cargo.toml
waymon/src/: bar.rs  collectors.rs  config.rs  main.rs  read.rs  stats.rs  util.rs  waymon.rs  widgets.rs
waymon/src/collectors/: diskstats.rs  meminfo.rs  net.rs  pressure.rs  procstat.rs
waymon/src/widgets/: cpu.rs  disk_io.rs  mem.rs  net.rs  pressure.rs  timeseries.rs
widget_derive/: Cargo.toml
widget_derive/src/: lib.rs
