[package]
name = "waymon"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4-layer-shell = "0.2.0"
gtk = { version = "0.7", package = "gtk4", features = ["v4_6"] }
clap = { version = "4.5.0", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
toml = "0.8.10"
thiserror = "1.0.57"
pangocairo = "0.18.0"
cairo = "0.0.4"
regex = "1.10.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
waymon-widget-derive = { path = "../widget_derive" }
